-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.1.0
-
a952fd7d5b03ce1968ec58871fbb8b3600895900 (qt/qtbase/5.12)
QObject::isSignalConnected is returning true, even after disconnect call.
Test in the attachment.
- resulted in
-
QTBUG-71550 tst_qqmllanguage::receivers() failed in all developer builds
-
- Closed
-
For Gerrit Dashboard: QTBUG-32340 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
241039,2 | QObject: Fix isSignalConnected() when signals have been disconnected | 5.12 | qt/qtbase | Status: MERGED | +2 | 0 |